# project_titanic

./: README.md  main.py  pyproject.toml  requirements.txt
data/cleaned/: y_test.csv  y_train.csv
data/cleaned/utils/: config.py
data/processed/: test.csv  train.csv
data/processed/utils/: config.py
data/utils/: config.py
models/: log_reg.pkl  setup.py
notebooks/: 2_transformaciones_tarea_resuelta.ipynb
src/: pipeline.py
src/cleaning_segregation/: clean_split_data.py
src/cleaning_segregation/utils/: config.py
src/feature_engineering/: feature_engineering.py
src/feature_engineering/transformers/: transformers_categorical.py  transformers_numerical.py
src/feature_engineering/utils/: config.py
src/model/: model_eval.py  model_training.py
src/model/utils/: config.py
src/pipeline/: pipeline.py
src/pipeline/utils/: config.py
