[tool.poetry]
name = "pyproject"
version = "0.1.0"
description = ""
authors = ["Erick Robledo <eriickeduardo97@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pyglet = "^1.5.23"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.950"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
